syntax = "proto3";

//Add Photo
//Delete Photo
//Update Username
//Update Location
//Set Deactivate Account
//Set Activate Account
option go_package = "./grpc";

service UserService{
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse){}
  rpc AddInfo(AddInfoRequest) returns (AddInfoResponse){}
}


message AddInfoRequest{
  int64 UserID = 1;
  string Username = 2;
  Location Location = 3;
  string DateBirth = 4;
}

message AddInfoResponse{
  string Status = 1;
}

message Location{
  string Country = 1;
  string Region = 2;
  string City = 3;
}

message GetProfileRequest{
  int64 UserID = 1;
}

message GetProfileResponse{
  string Username =1;
  string Location = 3;
  string DateBirth = 4;
  repeated bytes Photos = 5;
}